--- a/bib/source.bib
+++ b/bib/source.bib
@@ -136,3 +136,10 @@
 	urldate = {2019-07-15},
 	url = {https://towardsdatascience.com/accuracy-precision-recall-or-f1-331fb37c5cb9}
 }
+
+@online{spring_def,
+	author = {Budi Georachman},
+	title = {JAVA LEBIH MUDAH DENGAN SPRING FRAMEWORK},
+	date = {2018-12-06},
+	url = {https://socs.binus.ac.id/2018/12/06/java-lebih-mudah-dengan-spring-framework/}
+}
