--- a/main.tex
+++ b/main.tex
@@ -34,5 +34,7 @@
 	\backmatter
 	\include {penutup/daftar_pustaka}
 	\include {penutup/lampiran/lampiran_a}
+	\include {penutup/lampiran/lampiran_b}
+	\include {penutup/lampiran/lampiran_c}
 	\include {penutup/biodata}
 \end{document}
