--- a/pembuka/kata_pengantar.tex
+++ b/pembuka/kata_pengantar.tex
@@ -12,7 +12,7 @@ Penulis ingin mengucapkan terima kasih kepada semua pihak yang telah membimbing 
 	\item Keluarga Pratama Ristyantika, yang terus memotivasi penulis untuk menyelesaikan tugas akhir dan menjadi teman yang dapat diandalkan.
 	\item Valdi, Ade, Ipul, dan Petrus yang memberi penulis wawasan tentang dasar-dasar pembelajaran mesin.
 	\item Pi, partner bridge penulis yang darinya penulis belajar banyak hal.
-	\item GLBK, yang menginspirasi penulis atas keseimbangan antara prestasi dan kehidupannya.
+	\item GLBK dan Petualang, yang menginspirasi penulis atas keseimbangan antara prestasi dan kehidupannya.
 	\item Seluruh dosen dan karyawan Departemen Informatika Fakultas Teknologi Informasi dan Komunikasi Institut Teknologi Sepuluh Nopember yang telah memberi ilmu dan waktunya untuk mempersiapkan penulis agar siap untuk masuk ke dalam dunia kerja. 
 \end {enumerate}
 
