--- a/util/variables.tex
+++ b/util/variables.tex
@@ -14,7 +14,7 @@
 \def \fakultas {Fakultas Teknologi Informasi dan Komunikasi}
 \def \pembimbingdua {Dwi Sunaryono S.Kom., M.Kom. }
 \def \nikpembimbingdua {197205281997021001}
-\def \pembimbingsatu {Dr. Radityo Anggoro , S.Kom, M.Sc.}
+\def \pembimbingsatu {Dr.Eng. Radityo Anggoro , S.Kom, M.Sc.}
 \def \nikpembimbingsatu {19841016 2008121002}
 
 \def \juduleng {Design and Build of Online Leaf Detection Application on Android-Based Mobile Devices}
